--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -689,7 +689,7 @@ a {
   transition: color 0.6s;
 }
 .cid-ssBlTBIzZe {
-  padding-top: 8rem;
+  padding-top: 10rem;
   padding-bottom: 4rem;
   background-color: #6ec7f2;
 }
@@ -921,8 +921,8 @@ a {
   width: 100%;
 }
 .cid-sHGlhMylig {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+  padding-top: 2rem;
+  padding-bottom: 0rem;
   background-color: #ffffff;
 }
 @media (max-width: 991px) {
@@ -936,36 +936,36 @@ a {
 .cid-sHGlhMylig img {
   width: 100%;
 }
-.cid-ssBs7M5wOH {
+.cid-sJ7VMZ63G7 {
   padding-top: 1rem;
   padding-bottom: 1rem;
   background-color: #ffffff;
 }
 @media (max-width: 991px) {
-  .cid-ssBs7M5wOH .image-wrapper {
+  .cid-sJ7VMZ63G7 .image-wrapper {
     margin-bottom: 1rem;
   }
 }
-.cid-ssBs7M5wOH .row {
+.cid-sJ7VMZ63G7 .row {
   flex-direction: row-reverse;
 }
-.cid-ssBs7M5wOH img {
+.cid-sJ7VMZ63G7 img {
   width: 100%;
 }
-.cid-ssBtu2pgId {
+.cid-sJ7VNKUzDD {
   padding-top: 1rem;
   padding-bottom: 1rem;
   background-color: #ffffff;
 }
 @media (max-width: 991px) {
-  .cid-ssBtu2pgId .image-wrapper {
+  .cid-sJ7VNKUzDD .image-wrapper {
     margin-bottom: 1rem;
   }
 }
-.cid-ssBtu2pgId .row {
+.cid-sJ7VNKUzDD .row {
   flex-direction: row-reverse;
 }
-.cid-ssBtu2pgId img {
+.cid-sJ7VNKUzDD img {
   width: 100%;
 }
 .cid-sHCjoHTF8x {
